refactorisation of the path class